--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,12 +6,13 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 
 <body>
-<img src="images/KWParadise.jpg" alt="Key West Paradise pic" title="Key West backcountry">
+<img src="images/KW HP.jpg" alt="Key West Paradise pic" title="Key West backcountry">
 <h1>Simplicity. Adventure. Excitement. Connection.</h1>
 <p>I create designs that take you on an adventure. evoke excitement, pique curiosity and fuel desires to connect. 
 Check out my designs.
 Contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
-<img src=images/wingsconnect.jpg" a href="www.wingsconnect.com" title="Aviation website">
+<img src=images/wingsconnect.jpg">
+<a href="www.wingsconnect.com" alt="Aviation website" title="Aviation website">
 <a href="mailto:flyingtiger5@icloud.com">email me</a></p>
 <p><a href="http://instagram.com/aeroems">Connect with me on IG</a></p>
 <hr>
