--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -9,9 +9,16 @@
 <h1>Simplicity. Adventure. Excitement. Connection.</h1>
 <p>I create designs that take you on an adventure. evoke excitement, pique curiosity and fuel desires to connect. </p>
 <p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
-<p><a href="www.wingsconnect.com">Check out on of my sites</a></p>
+<hr>
+<p>
+
+</p>
+<p><a href="http://www.wingsconnect.com">Check out on of my sites</a></p>
 <p><a href="mailto:flyingtiger5@icloud.com">email me</a></p>
 <p><a href="http://instagram.com/aeroems">Connect with me on IG</a></p>
+<p>
+
+</p>
 <hr>
 <p>made with awesome &hearts; by Emily</p>
 </head>
