--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -13,7 +13,9 @@
 <p>
 
 </p>
-<p><a href="http://www.wingsconnect.com">Check out on of my sites</a></p>
+<img src="images/wingsconnect.jpg" alt="Aviation picture" "Flying in Virginia">
+<p><a href="http://www.wingsconnect.com">Check out one of my sites</a></p>
+
 <p><a href="mailto:flyingtiger5@icloud.com">email me</a></p>
 <p><a href="http://instagram.com/aeroems">Connect with me on IG</a></p>
 <p>
