--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -7,7 +7,7 @@
 <body>
 <img src="images/KW HP.jpg" alt="Key West picture" title="Key West backcountry">
 <h1>Simplicity. Adventure. Excitement. Connection.</h1>
-<p>I create designs that take you on an adventure. evoke excitement, pique curiosity and fuel desires to connect. </p>
+<p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
 <p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
 <hr>
 <p>
