--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -13,7 +13,7 @@
 <p>
 
 </p>
-<img src="images/wingsconnect.jpg" alt="Aviation picture" "Flying in Virginia">
+<img src="images/wingsconnect.jpg" alt="Aviation picture" title="Flying in Virginia">
 <p><a href="http://www.wingsconnect.com">Check out one of my sites</a></p>
 
 <p><a href="mailto:flyingtiger5@icloud.com">email me</a></p>
