--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -10,7 +10,7 @@
 <p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
 <p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
 
-<img src="images/wingsconnect.jpg" alt="Aviation picture" title="Flying Virginia">
+<img src="images/wingsconnect.jpg" alt="Aviation picture" title="Fly Virginia">
 <p><a href="http://www.wingsconnect.com">Check out one of my sites</a></p>
 
 <p><a href="mailto:flyingtiger5@icloud.com">email me</a></p>
