Updates to Unit3 indents

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,25 +1,23 @@
 <!DOC<!DOCTYPE html>
 <html>
 
-<head>
-<title>Emily Birchfield Designs</title>
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<body>
-<img src="images/KW HP.jpg" alt="Key West picture" title="Key West backcountry">
-<h1>Simplicity. Adventure. Excitement. Connection.</h1>
-<p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
-<p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
-<hr>
-<img src="images/wingsconnect.JPG" alt="Aviation" title="Fly Virginia">
-<p><a href="http://www.wingsconnect.com">Check out one of my sites</a></p>
+	<head>
+		<title>Emily Birchfield Designs</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+	</head>
 
-<p><a href="mailto:flyingtiger5@icloud.com">email me</a></p>
-<p><a href="http://instagram.com/aeroems">Connect with me on IG</a></p>
-<p>
+	<body>
+		<img src="images/KW HP.jpg" alt="Key West picture" title="Key West backcountry">
+		<h1>Simplicity. Adventure. Connection.</h1>
+		<p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
+		<p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
+		<hr>
+		<img src="images/wingsconnect.JPG" alt="Aviation" title="Fly Virginia">
+		<a href="http://www.wingsconnect.com">Check out one of my sites</a>	
+		<a href="mailto:flyingtiger5@icloud.com">email me</a>
+		<a href="http://instagram.com/aeroems">Connect on IG</a>
+		<hr>
+		<p>made with awesome &hearts; by Emily</p>
+	</body>
 
-</p>
-<hr>
-<p>made with awesome &hearts; by Emily</p>
-</head>
-</body>
 </html>
