Updates to Unit3 sample and contact links

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -15,9 +15,9 @@
 		<img src="images/wingsconnect.JPG" alt="Aviation" title="Fly Virginia">
 		<p>
 		</p>
-		<a href="http://www.wingsconnect.com">Check out one of my sites  </a>	
-		<a href="mailto:flyingtiger5@icloud.com">email me  </a>
-		<a href="http://instagram.com/aeroems">Connect on IG  </a>
+		<p><a href="http://www.wingsconnect.com">Check out one of my sites</a></p>
+		<p><a href="mailto:flyingtiger5@icloud.com">Email me</a></p>
+		<p><a href="http://instagram.com/aeroems">Connect on IG</a></p>
 		<hr>
 		<p>made with awesome &hearts; by Emily</p>
 	</body>
