--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -8,7 +8,6 @@
 <h1>Emily Birchfield Designs</h1>
 <p>This is a gallery of my designs</p>
 </body>
-=======
 
 	<head>
 		<title>Emily Birchfield Designs</title>
@@ -21,10 +20,18 @@
 		<p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
 		<p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
 		<hr>
+		<h2>About me</h2>
+		<p>I love adventure and seek it out. My career has been an adventure. I have worked in diversified industries, from start up to Fortune Leaders. I enjoy the challenges and using my skills, knowledge and experience gained from my adventures to find the right solutions to contribute to awesome experiences. I'm open and eager to learn more that will continue to support my growth in this journey called Life!</p>
+		<p><a href="https://www.linkedin.com/in/ebirchfield/">Want more details on my career background, visit my LinkedIn profile</a></p>
+		<hr>
+		<h2>Samples</h2>
+        <p>A few of my sites and blogs. I can support your needs to build yours.</p>
 		<img src="images/wingsconnect.JPG" alt="Aviation" title="Fly Virginia">
-		<p>
-		</p>
-		<p><a href="http://www.wingsconnect.com">Check out one of my sites</a></p>
+		<p><a href="http://www.wingsconnect.com">My Aviation site</a></p>
+		<img src="images/jobadventurer.JPG" alt="Talent Acquisition" title="Making Connections">
+		<p><a href="http://www.jobadventurer.com">My Professional Networking site</a></p>
+		<hr>
+		<h2>Let's get connected!</h2>
 		<p><a href="mailto:flyingtiger5@icloud.com">Email me</a></p>
 		<p><a href="http://instagram.com/aeroems">Connect on IG</a></p>
 		<hr>
