--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,6 +1,6 @@
 <!DOC<!DOCTYPE html>
 <html>
-<<<<<<< HEAD
+
 <head>
 <title>Emily Birchfield Designs</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -26,17 +26,22 @@
 		<hr>
 		<h2>Samples</h2>
         <p>A few of my sites and blogs. I can support your needs to build yours.</p>
+        <p><a href="http://www.wingsconnect.com">My Aviation site, WingsConnect</a></p>
 		<img src="images/wingsconnect.JPG" alt="Aviation" title="Fly Virginia">
-		<p><a href="http://www.wingsconnect.com">My Aviation site</a></p>
+		<p><a href="http://www.jobadventurer.com">My Professional Networking site, JobAdventurer</a></p>
 		<img src="images/jobadventurer.JPG" alt="Talent Acquisition" title="Making Connections">
-		<p><a href="http://www.jobadventurer.com">My Professional Networking site</a></p>
+		<p><a href="http://talkadventuretome.blogspot.com">My Adventure blog, Talk Adventure To Me!</a></p>
+		<img src="images/TalkAdventureToMe_blog.JPG" alt="Adventure blog" title="Adventure">
+		</p>
 		<hr>
 		<h2>Let's get connected!</h2>
+		<p>I'm active on several social media channels. Feel free to connect with me.</p>
 		<p><a href="mailto:flyingtiger5@icloud.com">Email me</a></p>
-		<p><a href="http://instagram.com/aeroems">Connect on IG</a></p>
+		<p><a href="http://instagram.com/aeroems">Connect on IG to see the world from my eyes</a></p>
+		<p><a href="https://www.linkedin.com/in/ebirchfield/">My LinkedIn Profile</a></p>
 		<hr>
 		<p>made with awesome &hearts; by Emily</p>
 	</body>
 
 </html>
->>>>>>> origin/master
+
