--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -23,7 +23,8 @@
 		<p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
 		<hr>
 		<h2>About me</h2>
-		<p>I love adventure and seek it out. My career has been an adventure. I have worked in diversified industries, from start up to Fortune Leaders. I enjoy the challenges and using my skills, knowledge and experience gained from my adventures to find the right solutions to contribute to awesome experiences. I'm open and eager to learn more that will continue to support my growth in this journey called Life!</p>
+		<p>I love adventure and seek it out. My career has been an adventure. I have worked in diversified industries, from start up to Fortune Leaders.</p>
+		<p>I enjoy the challenges and using my skills, knowledge and experience gained from my adventures to find the right solutions to contribute to awesome experiences. I'm open and eager to learn more that will continue to support my growth in this journey called Life!</p>
 		<p><a href="https://www.linkedin.com/in/ebirchfield/">Want more details on my career background, visit my LinkedIn profile</a></p>
 		<hr>
 		<h2>Samples</h2>
