unit 3 index updates

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -24,7 +24,7 @@
 		<hr>
 		<h2>About me</h2>
 		<p>I love adventure and seek it out. My career has been an adventure. I have worked in diversified industries, from start up to Fortune Leaders.</p>
-		<p>I enjoy the challenges and using my skills, knowledge and experience gained from my adventures to find the right solutions to contribute to awesome experiences. I'm open and eager to learn more that will continue to support my growth in this journey called Life!</p>
+		<p>I enjoy challenges and using my skills, knowledge and experience gained from my adventures to find the right solutions to contribute to awesome experiences!</p>
 		<p><a href="https://www.linkedin.com/in/ebirchfield/">Want more details on my career background, visit my LinkedIn profile</a></p>
 		<hr>
 		<h2>Samples</h2>
