unit4 index updates

--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
 <h1>Emily Birchfield Designs</h1>
-<p>This is a gallery of my designs</p>
+<p>Gallery of my designs</p>
 </body>
 
 	<head>
@@ -16,26 +16,23 @@
 
 	<body>
 		<img src="images/KW HP.jpg" alt="Key West picture" title="Key West backcountry">
-		<h1>Simplicity. Adventure. Connection.</h1>
+		<h2>Simplicity. Adventure. Connection.</h1>
 		<hr>
-		<h2>What I offer</h2>
+		<h3>What I offer</h3>
 		<p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
 		<p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
 		<hr>
-		<h2>About me</h2>
+		<h3>About me</h3>
 		<p>I love adventure and seek it out. My career has been an adventure. I have worked in diversified industries, from start up to Fortune Leaders.</p>
 		<p>I enjoy challenges and using my skills, knowledge and experience gained from my adventures to find the right solutions to contribute to awesome experiences!</p>
 		<p><a href="https://www.linkedin.com/in/ebirchfield/">Want more details on my career background, visit my LinkedIn profile</a></p>
 		<hr>
-		<h2>Samples</h2>
+		<h3>Samples</h3>
         <p>A few of my sites and blogs. I can support your needs to build yours.</p>
         <p><a href="http://www.wingsconnect.com">My Aviation site, WingsConnect</a></p>
 		<img src="images/wingsconnect.JPG" alt="Aviation" title="Fly Virginia">
 		<p><a href="http://www.jobadventurer.com">My Professional Networking site, JobAdventurer</a></p>
-		<img src="images/jobadventurer.JPG" alt="Talent Acquisition" title="Making Connections">
 		<p><a href="http://talkadventuretome.blogspot.com">My Adventure blog, Talk Adventure To Me!</a></p>
-		<img src="images/TalkAdventureToMe_blog.JPG" alt="Adventure blog" title="Adventure">
-		</p>
 		<hr>
 		<h2>Let's get connected!</h2>
 		<p>I'm active on several social media channels. Feel free to connect with me.</p>
