--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -1,4 +1,4 @@
-<!DOC<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -10,7 +10,7 @@
 	<h1>Emily Birchfield Designs</h1>
 	<p>Gallery of my designs</p>
 	<img src="images/KW HP.jpg" alt="Key West picture" title="Key West backcountry">
-	<h2>Simplicity. Adventure. Connection.</h1>
+	<h2>Simplicity. Adventure. Connection.</h2>
 	<hr>
 	<h3>What I offer</h3>
 	<p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
