--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>Emily Birchfield Designs</title>
+<title>Emily_Birchfield_Designs</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -14,48 +14,48 @@
 	<hr>
 	</header>
 	<nav>
-		<a class="nav">What I Offer</a>  
-		<a class="nav">About Me</a>  
+		<a class="nav">Offer</a>  
+		<a class="nav">Me</a>  
 		<a class="nav">Samples</a>  
-		<a class="nav">Let's Connect</a>
+		<a class="nav">Connect</a>
 	</nav>
 	<section id="one">
 		<aside class="picture">
-		<h3>Explore</h3>
-		<img src="images/KWHP.jpg" alt="Key West picture" title="Key West backcountry">
+			<h3>Explore</h3>
+			<img src="images/KWHP.jpg" alt="Key West picture" title="Key West backcountry">
 		</aside>
 
-		<article class="What I Offer">
-		<h3>What I offer</h3>
-		<p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
-		<p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
-		<hr>
+		<article class="What_I_Offer">
+			<h3>What I offer</h3>
+			<p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
+			<p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
+			<hr>
 		</article>
 
-		<article class="About Me">
-		<h3>About me</h3>
-		<p>I love adventure and seek it out. My career has been an adventure. I have worked in diversified industries, from start up to Fortune Leaders.</p>
-		<p>I enjoy challenges and using my skills, knowledge and experience gained from my adventures to find the right solutions to contribute to awesome experiences!</p>
-		<hr>
+		<article class="About_Me">
+			<h3>About me</h3>
+			<p>I love adventure and seek it out. My career has been an adventure. I have worked in diversified industries, from start up to Fortune Leaders.</p>
+			<p>I enjoy challenges and using my skills, knowledge and experience gained from my adventures to find the right solutions to contribute to awesome experiences!</p>
+			<hr>
 		</article>
 		
 		<article class="Samples">
-		<h3>Samples</h3>
-    	<p>A few of my sites and blogs. I can support your needs to build yours.</p>
-    	<p><a href="http://www.wingsconnect.com">My Aviation site, WingsConnect</a></p>
-    	<img src="images/wingsconnect.JPG" alt="Aviation" title="Fly Virginia"> 
-		<p><a href="http://www.jobadventurer.com">My Professional Networking site, JobAdventurer</a></p>
-		<p><a href="http://talkadventuretome.blogspot.com">My Adventure blog, Talk Adventure To Me!</a></p>
-		<hr>
+			<h3>Samples</h3>
+    		<p>A few of my sites and blogs. I can support your needs to build yours.</p>
+    		<p><a href="http://www.wingsconnect.com">My Aviation site, WingsConnect</a></p>
+    		<img src="images/wingsconnect.JPG" alt="Aviation" title="Fly Virginia"> 
+			<p><a href="http://www.jobadventurer.com">My Professional Networking site, JobAdventurer</a></p>
+			<p><a href="http://talkadventuretome.blogspot.com">My Adventure blog, Talk Adventure To Me!</a></p>
+			<hr>
 		</article>
 
-		<article class="Let's Connect">
-		<h3>Let's get connected!</h3>
-		<p>I'm active on several social media channels. Feel free to connect with me.</p>
-		<p><a href="mailto:flyingtiger5@icloud.com">Email me</a></p>
-		<p><a href="http://instagram.com/aeroems">Connect on IG to see the world from my eyes</a></p>
-		<p><a href="https://www.linkedin.com/in/ebirchfield/">My LinkedIn Profile</a></p>
-		<hr>
+		<article class="Lets_Connect">
+			<h3>Let's get connected!</h3>
+			<p>I'm active on several social media channels. Feel free to connect with me.</p>
+			<p><a href="mailto:flyingtiger5@icloud.com">Email me</a></p>
+			<p><a href="http://instagram.com/aeroems">Connect on IG to see the world from my eyes</a></p>
+			<p><a href="https://www.linkedin.com/in/ebirchfield/">My LinkedIn Profile</a></p>
+			<hr>
 		</article>
 
 	</section>
