--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -7,12 +7,12 @@
 	</head>
 	
 	<body>
-	
+
 		<header>
 			<div id="wrapper">
 				<h1>Emily Birchfield Designs</h1>
 				<h2>Simplicity. Adventure. Connection.</h2>
-				<img src="images/KWHP.JPG" alt="KeyWest" title="KeyWest">
+				<img src="images/KWHP.jpg" alt="Backcountry" title="KeyWest">
 				<hr>
 			<nav>
 				<a class="nav">Offer</a>
@@ -45,9 +45,9 @@
     			<p><a href="http://www.wingsconnect.com">My Aviation site, WingsConnect</a></p>
     			<img src="images/wingsconnect.JPG" alt="Aviation" title="Fly Virginia"> 
 				<p><a href="http://www.jobadventurer.com">My Professional Networking site, JobAdventurer</a></p>
-				<img src="images/jobadventurer.jpg" alt="Talent Acquisition" title="Recruiting">
+				<img src="images/jobadventurer.JPG" alt="Talent Acquisition" title="Recruiting">
 				<p><a href="http://talkadventuretome.blog.com">My Adventure blog, Talk Adventure To Me!</a></p>
-				<img src="images/talkadventuretome_blog.jpg" alt="Adventure" title="adventure">
+				<img src="images/TalkAdventureToMe_blog.JPG" alt="Adventure" title="adventure">
 				<hr>
 			</aside>
 			<article id="connect">
