--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -24,41 +24,42 @@
 		</header>	
 		
 		<section>
-		<div id="two_column" class="clearfix">
-        	<aside id="left">
-        		<h3>ABOUT ME</h3>
-       	 		<p>I love adventure and seek it out. My career has been an adventure. I have worked in diversified industries, from start up to Fortune Leaders.</p>
-				<p>I enjoy challenges and using my skills, knowledge and experience gained from my adventures to find the right solutions to contribute to awesome experiences!</p>
-				<hr>
-    		</aside>
-    		<article id="right">
-       	 		<h3>WHAT I OFFER</h3>
-        		<p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
-				<p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
-				<hr>
-			</article>	
-		</div>	
-		<div id="two_column" class="clearfix">
-			<aside id="samples">
-				<h3>SAMPLES</h3>
-    			<p>A few of my sites and blogs. I can support your needs to build yours.</p>
-    			<p><a href="http://www.wingsconnect.com">My Aviation site, WingsConnect</a></p>
-    			<img src="images/wingsconnect.JPG" alt="Aviation" title="Fly Virginia"> 
-				<p><a href="http://www.jobadventurer.com">My Professional Networking site, JobAdventurer</a></p>
-				<img src="images/jobadventurer.JPG" alt="Talent Acquisition" title="Recruiting">
-				<p><a href="http://talkadventuretome.blog.com">My Adventure blog, Talk Adventure To Me!</a></p>
-				<img src="images/TalkAdventureToMe_blog.JPG" alt="Adventure" title="adventure">
-				<hr>
-			</aside>
-			<article id="connect">
-				<h3>LET'S CONNECT</h3>
-				<p>I'm active on several social media channels. Connect with me.</p>
-				<p><a href="mailto:flyingtiger5@icloud.com">Email me</a></p>
-				<p><a href="http://instagram.com/aeroems">Connect on IG to see the world from my eyes</a></p>
-				<p><a href="https://www.linkedin.com/in/ebirchfield/">My LinkedIn Profile</a></p>
-				<hr>
-			</article>
-		</div>
+			<div id="two_column" class="clearfix">
+				<aside id="left">
+	        		<h3>ABOUT ME</h3>
+	       	 		<p>I love adventure and seek it out. My career has been an adventure. I have worked in diversified industries, from start up to Fortune Leaders.</p>
+					<p>I enjoy challenges and using my skills, knowledge and experience gained from my adventures to find the right solutions to contribute to awesome experiences!</p>
+					<hr>
+	    		</aside>
+	    		<article id="offer">
+	       	 		<h3>WHAT I OFFER</h3>
+	        		<p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
+					<p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
+					<hr>
+				</article>	
+			<div id="two_column" id="clearfix">
+				<aside id="connect">
+					<h3>LET'S CONNECT</h3>
+					<p>I'm active on several social media channels. Connect with me.</p>
+					<p><a href="mailto:flyingtiger5@icloud.com">Email me</a></p>
+					<p><a href="http://instagram.com/aeroems">Connect on IG to see the world from my eyes</a></p>
+					<p><a href="https://www.linkedin.com/in/ebirchfield/">My LinkedIn Profile</a></p>
+					<hr>
+				</aside>	
+			</div>
+			<div id="two_column" id="clearfix">
+				<article id="samples">
+					<h3>SAMPLES</h3>
+	    			<p>A few of my sites and blogs. I can support your needs to build yours.</p>
+	    			<p><a href="http://www.wingsconnect.com">My Aviation site, WingsConnect</a></p>
+	    			<img src="images/wingsconnect.JPG" alt="Aviation" title="Fly Virginia"> 
+					<p><a href="http://www.jobadventurer.com">My Professional Networking site, JobAdventurer</a></p>
+					<img src="images/jobadventurer.JPG" alt="Talent Acquisition" title="Recruiting">
+					<p><a href="http://talkadventuretome.blog.com">My Adventure blog, Talk Adventure To Me!</a></p>
+					<img src="images/TalkAdventureToMe_blog.JPG" alt="Adventure" title="adventure">
+					<hr>
+				</article>
+			</div>
 		</section>
 	
 		<footer><p>made with awesome &hearts; by Emily</p> @ 2015 EB</footer>
