--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -24,6 +24,7 @@
 		</header>	
 		
 		<section>
+			<h1>EXPLORE</h1>
 			<div id="two_column" class="clearfix">
 				<aside id="left">
 	        		<h3>ABOUT ME</h3>
@@ -37,17 +38,15 @@
 					<p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
 					<hr>
 				</article>	
-			<div id="two_column" id="clearfix">
+			
 				<aside id="connect">
 					<h3>LET'S CONNECT</h3>
-					<p>I'm active on several social media channels. Connect with me.</p>
-					<p><a href="mailto:flyingtiger5@icloud.com">Email me</a></p>
-					<p><a href="http://instagram.com/aeroems">Connect on IG to see the world from my eyes</a></p>
-					<p><a href="https://www.linkedin.com/in/ebirchfield/">My LinkedIn Profile</a></p>
+					<p>Connect with me.</p>
+					<p><a href="mailto:flyingtiger5@icloud.com">Email</a></p>
+					<p><a href="http://instagram.com/aeroems">See the world from my eyes on IG</a></p>
+					<p><a href="https://www.linkedin.com/in/ebirchfield/">My LinkedIn</a></p>
 					<hr>
 				</aside>	
-			</div>
-			<div id="two_column" id="clearfix">
 				<article id="samples">
 					<h3>SAMPLES</h3>
 	    			<p>A few of my sites and blogs. I can support your needs to build yours.</p>
@@ -63,8 +62,6 @@
 		</section>
 	
 		<footer><p>made with awesome &hearts; by Emily</p> @ 2015 EB</footer>
-	
-		</div>
 
 	</body>
 </html>
