--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -23,23 +23,22 @@
 		</header>	
 		<section>
 			<h4>EXPLORE</h4>
-			<div id="two_column" class="clearfix">
-				<article id="left">
+			<div id="three_column" class="clearfix">
+	    		<article id="offer">
+	    		<h3>WHAT I OFFER</h3>
+	        		<p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
+					<p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
+					<hr>
+				</article>	
+				<article id="about">
 	        		<h3>ABOUT ME</h3>
 	       	 		<p>I love adventure. I've lived around the world and worked in diversified industries, start up to Fortune Leaders.</p>
 					<p>I enjoy challenges and using my skills, knowledge and experience gained from my adventures to find the right solutions to contribute to awesome experiences!</p>
 					<hr>
 	    		</article>
-	    		<article id="offer">
-	       	 		<h3>WHAT I OFFER</h3>
-	        		<p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
-					<p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
-					<hr>
-				</article>	
-			
 				<article id="connect">
 					<h3>LET'S CONNECT</h3>
-					<p>Reach me here</p>
+					
 					<p><a href="mailto:flyingtiger5@icloud.com">Email</a></p>
 					<p><a href="http://instagram.com/aeroems">The world from my eyes on IG</a></p>
 					<p><a href="https://www.linkedin.com/in/ebirchfield/">My LinkedIn</a></p>
