--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -26,14 +26,13 @@
 			<div id="three_column" class="clearfix">
 	    		<article id="offer">
 	    		<h3>WHAT I OFFER</h3>
-	        		<p>I create designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect. </p>
-					<p>Check out my designs and contact me so we can connect about your desires to create a virtual place to showcase your interests, passions or professional services.</p>
+	        		<p>I create designs that take you on an adventure.</p>
+	        		<p> They evoke excitement, pique curiosity and fuel desires to connect. </p>
 					<hr>
 				</article>	
 				<article id="about">
 	        		<h3>ABOUT ME</h3>
-	       	 		<p>I love adventure. I've lived around the world and worked in diversified industries, start up to Fortune Leaders.</p>
-					<p>I enjoy challenges and using my skills, knowledge and experience gained from my adventures to find the right solutions to contribute to awesome experiences!</p>
+					<p>I enjoy challenges and using my skills, knowledge and experience gained from my adventures. Let's connect to create the right solution for you!</p>
 					<hr>
 	    		</article>
 				<article id="connect">
