--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -32,14 +32,13 @@
 				</article>	
 				<article id="about">
 	        		<h3>ABOUT ME</h3>
-					<p>I enjoy challenges and using my skills, knowledge and experience gained from my adventures. Let's connect to create the right solution for you!</p>
+					<p>I enjoy challenges and using my skills, knowledge and experience gained from my adventures.</p>
+					<p>Let's connect to create the right solution for you!</p>
 					<hr>
 	    		</article>
 				<article id="connect">
 					<h3>LET'S CONNECT</h3>
-					
 					<p><a href="mailto:flyingtiger5@icloud.com">Email</a></p>
-					<p><a href="http://instagram.com/aeroems">The world from my eyes on IG</a></p>
 					<p><a href="https://www.linkedin.com/in/ebirchfield/">My LinkedIn</a></p>
 					<hr>
 				</article>	
