updates to unit 8

--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -38,8 +38,9 @@
 	    		</article>
 				<article id="connect">
 					<h3>LET'S CONNECT</h3>
-					<p><a href="mailto:flyingtiger5@icloud.com">Email</a></p>
-					<p><a href="https://www.linkedin.com/in/ebirchfield/">My LinkedIn</a></p>
+					<p><a href="mailto:flyingtiger5@icloud.com">Email</a>
+				 	/ <a href="https://instagram.com/aeroems">Instagram</a> /
+					<a href="https://www.linkedin.com/in/ebirchfield/">My LinkedIn</a></p>
 					<hr>
 				</article>	
 				<aside id="samples">
