--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -48,7 +48,7 @@
 	    			<img src="images/wingsconnect.JPG" alt="Aviation" title="Fly Virginia"> 
 					<p><a href="http://www.jobadventurer.com">My Professional Networking site, JobAdventurer</a></p>
 					<img src="images/jobadventurer.JPG" alt="Talent Acquisition" title="Recruiting">
-					<p><a href="http://talkadventuretome.blog.com">My Adventure blog, Talk Adventure To Me!</a></p>
+					<p><a href="http://talkadventuretome.blog.com">Adventure blog, Talk Adventure To Me!</a></p>
 					<img src="images/TalkAdventureToMe_blog.JPG" alt="Adventure" title="adventure">
 				</aside>
 			</div>
