--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -33,7 +33,7 @@
 				<article id="about">
 	        		<h3>ABOUT ME</h3>
 					<p>I enjoy challenges and using my skills, knowledge and experience gained from my adventures.</p>
-					<p>Let's connect to create the right solution for you!</p>
+					<p>Let's create the right solution for you!</p>
 					<hr>
 	    		</article>
 				<article id="connect">
