--- a/unit_9/about.html
+++ b/unit_9/about.html
@@ -14,10 +14,11 @@
 				<img src="images/KWHP.jpg" alt="Backcountry" title="KeyWest">
 				<hr>
 			<nav>
-				<a class="nav">Offer</a>
-				<a class="nav">About Me</a>
-				<a class="nav">Samples</a>
-				<a href="https://ebirch5.github.io/unit_9/contact.html">Connect</a>
+				<a href="https://ebirch5.github.io/unit_9/offer.html">Offer</a>
+				<a href="https://ebirch5.github.io/unit_9/about.html">About Me</a>
+				<a href="https://ebirch5.github.io/unit_9/samples.html">Samples</a>
+				<a href="https://ebirch5.github.io/unit_9/connect.html">Connect</a>
+				<a href="https://ebirch5.github.io/unit_9/index.html">Home</a>
 			</nav>
 			</div>
 		</header>	
