--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -12,13 +12,11 @@
 				<h1>Emily Birchfield Designs</h1>
 				<h2>Simplicity. Adventure. Connection.</h2>
 				<img src="images/KWHP.jpg" alt="Backcountry" title="KeyWest">
-				<hr>
 			<nav>
-				<a class="nav">Offer</a>
-				<a class="nav">About Me</a>
-				<a class="nav">Samples</a>
-				<a class="nav">Connect</a>
-			</nav>
+				<a href="https://ebirch5.github.io/unit_9/offer.html">Offer</a>
+				<a href="https://ebirch5.github.io/unit_9/about.html">About Me</a>
+				<a href="https://ebirch5.github.io/unit_9/samples.html">Samples</a>
+				<a href="https://ebirch5.github.io/unit_9/connect.html">Connect</a>
 			</div>
 		</header>	
 		<section>
