--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -16,7 +16,7 @@
 				<a href="https://ebirch5.github.io/unit_9/offer.html">Offer</a>
 				<a href="https://ebirch5.github.io/unit_9/about.html">About Me</a>
 				<a href="https://ebirch5.github.io/unit_9/samples.html">Samples</a>
-				<a href="https://ebirch5.github.io/unit_9/connect.html">Connect</a>
+				<a href="https://ebirch5.github.io/unit_9/contact.html">Connect</a>
 			</div>
 		</header>	
 		<section>
