--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -17,6 +17,7 @@
 				<a href="https://ebirch5.github.io/unit_9/about.html">About Me</a>
 				<a href="https://ebirch5.github.io/unit_9/samples.html">Samples</a>
 				<a href="https://ebirch5.github.io/unit_9/connect.html">Connect</a>
+				</nav>
 			</div>
 		</header>	
 		<section>
