--- a/unit_9/samples.html
+++ b/unit_9/samples.html
@@ -32,8 +32,8 @@
 	    			<img src="images/wingsconnect.JPG" alt="Aviation" title="Fly Virginia"> 
 					<p><a href="http://www.jobadventurer.com">My Professional Networking site, JobAdventurer</a></p>
 					<img src="images/jobadventurer.JPG" alt="Talent Acquisition" title="Recruiting">
-					<p><a href="http://talkadventuretome.blog.com">Adventure blog, Talk Adventure To Me!</a></p>
-					<img src="images/TalkAdventureToMe_blogspot.JPG" alt="Adventure" title="adventure">
+					<p><a href="http://talkadventuretome.blogspot.com">Adventure blog, Talk Adventure To Me!</a></p>
+					<img src="images/TalkAdventureToMe_blog.JPG" alt="Adventure" title="adventure">
 				</aside>
 			</div>
 		</section>
