--- a/unit_10/email.html
+++ b/unit_10/email.html
@@ -21,7 +21,7 @@
 		<tr>
 			<td colspan="2" align="center" style="background: #fffebb;">
               <img src="images/KWHP.jpg" alt="Backcountry" title="KeyWest 
-                   style="width: 400px;" alt="learn more!">
+                   style="width: 100%;" alt="learn more!">
           </td>
 		</tr>
 		<tr>
@@ -31,7 +31,7 @@
 			</td>
 			<td style="background:#8ED2D1; color: gray; padding: 1em;" width="50%" valign="top">
 				<h2 style="color: #fffebb; text-transform: uppercase; border-bottom: 4px solid #fffebb; display: inline-block;"></h2>
-				<table style="color: black; background: gray;" cellspadding="20" align="center" border="0">
+				<table style="color: black; background: #F67D8C;" cellspadding="20" align="center" border="0">
 					<tr>
 						<td>Email</td>
 						<td>Instagram</td>
@@ -44,7 +44,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="center" colspan="2">© 2015</td>
+			<td align="center" colspan="2"><© 2015</td>
 		</tr>
 	</table>
 </body>
