--- a/unit_10/email.html
+++ b/unit_10/email.html
@@ -7,13 +7,13 @@
 <body>
 	<table style="color: black; background: white;" cellpadding="20" cellspacing="0" align="center" border="0">	
 		<tr>
-			<th style="font-size: 2em;" align="left">Emily Birchfield Designs</th>
+			<th style="font-size: 1.8em;" align="left">Emily Birchfield Designs</th>
 			<td>
 			<table style="color: black; background: white;" cellpadding="20" cellspacing="0" align="center" border="0">
 				<tr>
-					<td><a href="#" style="text-decoration: none; color: black;">about</a></td>
-					<td><a href="#" style="text-decoration: none; color: black;">samples</a></td>
-					<td><a href="#" style="text-decoration: none; color: black;">contact</a></td>
+					<td><a href="#" style="text-decoration: none; color: #F67D8C;">about</a></td>
+					<td><a href="#" style="text-decoration: none; color: #F67D8C;">samples</a></td>
+					<td><a href="#" style="text-decoration: none; color: #F67D8C;">contact</a></td>
 				</tr>
 			</table>
 			</td>
@@ -33,12 +33,12 @@
 				<h2 style="color: #fffebb; text-transform: uppercase; border-bottom: 4px solid #fffebb; display: inline-block;"></h2>
 				<table style="color: black; background: #F67D8C;" cellspadding="20" align="center" border="0">
 					<tr>
-						<td>Email</td>
+						<td>Samples</td>
 						<td>Instagram</td>
 					</tr>
 					<tr>
 						<td>LinkedIn</td>
-						<td>Website</td>
+						<td>Email</td>
 					</tr>
 				</table>
 			</td>
