--- a/unit_10/email.html
+++ b/unit_10/email.html
@@ -21,15 +21,15 @@
 		<tr>
 			<td colspan="2" align="center" style="background: #fffebb;">
               <img src="https://static.pexels.com/photos/63340/pexels-photo-63340.jpeg" alt="ocean" title="ocean" 
-                   style="width: 100%;" alt="learn more!">
+                   style="width: 30%;" alt="learn more!">
           </td>
 		</tr>
 		<tr>
-			<td style="background:#8ED2D1; color: gray; padding: 1em;" width="50%" valign="top">
+			<td style="background:#8ED2D1; color: gray; padding: 1em;" width="30%" valign="top">
 				<h2 style="color: #fffebb; text-transform: uppercase; border-bottom: 4px solid #fffebb; display: inline-block;">What I offer</h2>
 				<p>Designs that take you on an adventure, evoke excitement, pique curiosity and fuel desires to connect.</p>
 			</td>
-			<td style="background:#8ED2D1; color: gray; padding: 1em;" width="50%" valign="top">
+			<td style="background:#8ED2D1; color: gray; padding: 1em;" width="30%" valign="top">
 				<h2 style="color: #fffebb; text-transform: uppercase; border-bottom: 4px solid #fffebb; display: inline-block;"></h2>
 				<table style="color: black; background: #F67D8C;" cellspadding="20" align="center" border="0">
 					<tr>
@@ -44,7 +44,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="center" colspan="2"><© 2015</td>
+			<td align="center" colspan="2">© 2015</td>
 		</tr>
 	</table>
 </body>
